@@ -455,6 +455,112 @@ name|baseScorer
 operator|!=
 literal|null
 assert|;
+comment|// some scorers, eg ReqExlScorer, can hit NPE if cost is called after nextDoc
+name|long
+name|baseQueryCost
+init|=
+name|baseScorer
+operator|.
+name|cost
+argument_list|()
+decl_stmt|;
+specifier|final
+name|int
+name|numDims
+init|=
+name|dims
+operator|.
+name|length
+decl_stmt|;
+name|long
+name|drillDownCost
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|int
+name|dim
+init|=
+literal|0
+init|;
+name|dim
+operator|<
+name|numDims
+condition|;
+name|dim
+operator|++
+control|)
+block|{
+name|DocIdSetIterator
+name|disi
+init|=
+name|dims
+index|[
+name|dim
+index|]
+operator|.
+name|disi
+decl_stmt|;
+if|if
+condition|(
+name|dims
+index|[
+name|dim
+index|]
+operator|.
+name|bits
+operator|==
+literal|null
+operator|&&
+name|disi
+operator|!=
+literal|null
+condition|)
+block|{
+name|drillDownCost
+operator|+=
+name|disi
+operator|.
+name|cost
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+name|long
+name|drillDownAdvancedCost
+init|=
+literal|0
+decl_stmt|;
+if|if
+condition|(
+name|numDims
+operator|>
+literal|1
+operator|&&
+name|dims
+index|[
+literal|1
+index|]
+operator|.
+name|disi
+operator|==
+literal|null
+condition|)
+block|{
+name|drillDownAdvancedCost
+operator|=
+name|dims
+index|[
+literal|1
+index|]
+operator|.
+name|disi
+operator|.
+name|cost
+argument_list|()
+expr_stmt|;
+block|}
 comment|// Position all scorers to their first matching doc:
 name|baseScorer
 operator|.
@@ -506,14 +612,6 @@ operator|++
 expr_stmt|;
 block|}
 block|}
-specifier|final
-name|int
-name|numDims
-init|=
-name|dims
-operator|.
-name|length
-decl_stmt|;
 name|Bits
 index|[]
 name|bits
@@ -557,11 +655,6 @@ name|numDims
 operator|-
 name|numBits
 index|]
-decl_stmt|;
-name|long
-name|drillDownCost
-init|=
-literal|0
 decl_stmt|;
 name|int
 name|disiUpto
@@ -632,21 +725,6 @@ expr_stmt|;
 name|disiUpto
 operator|++
 expr_stmt|;
-if|if
-condition|(
-name|disi
-operator|!=
-literal|null
-condition|)
-block|{
-name|drillDownCost
-operator|+=
-name|disi
-operator|.
-name|cost
-argument_list|()
-expr_stmt|;
-block|}
 block|}
 else|else
 block|{
@@ -679,14 +757,6 @@ operator|++
 expr_stmt|;
 block|}
 block|}
-name|long
-name|baseQueryCost
-init|=
-name|baseScorer
-operator|.
-name|cost
-argument_list|()
-decl_stmt|;
 comment|/*     System.out.println("\nbaseDocID=" + baseScorer.docID() + " est=" + estBaseHitCount);     System.out.println("  maxDoc=" + context.reader().maxDoc());     System.out.println("  maxCost=" + maxCost);     System.out.println("  dims[0].freq=" + dims[0].freq);     if (numDims> 1) {       System.out.println("  dims[1].freq=" + dims[1].freq);     }     */
 if|if
 condition|(
@@ -735,15 +805,7 @@ name|disi
 operator|==
 literal|null
 operator|||
-name|dims
-index|[
-literal|1
-index|]
-operator|.
-name|disi
-operator|.
-name|cost
-argument_list|()
+name|drillDownAdvancedCost
 operator|<
 name|baseQueryCost
 operator|/
