@@ -344,6 +344,45 @@ name|lucene
 operator|.
 name|search
 operator|.
+name|BooleanClause
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|BooleanQuery
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|Collector
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
 name|DocIdSet
 import|;
 end_import
@@ -7567,6 +7606,305 @@ name|getIndexReader
 argument_list|()
 argument_list|,
 name|taxoReader
+argument_list|,
+name|dir
+argument_list|,
+name|taxoDir
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testScorer
+specifier|public
+name|void
+name|testScorer
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// LUCENE-6001 some scorers, eg ReqExlScorer, can hit NPE if cost is called after nextDoc
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|Directory
+name|taxoDir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+comment|// Writes facet ords to a separate directory from the
+comment|// main index:
+name|DirectoryTaxonomyWriter
+name|taxoWriter
+init|=
+operator|new
+name|DirectoryTaxonomyWriter
+argument_list|(
+name|taxoDir
+argument_list|,
+name|IndexWriterConfig
+operator|.
+name|OpenMode
+operator|.
+name|CREATE
+argument_list|)
+decl_stmt|;
+name|FacetsConfig
+name|config
+init|=
+operator|new
+name|FacetsConfig
+argument_list|()
+decl_stmt|;
+name|RandomIndexWriter
+name|writer
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|dir
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|newTextField
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"foo bar"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|FacetField
+argument_list|(
+literal|"Author"
+argument_list|,
+literal|"Bob"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|FacetField
+argument_list|(
+literal|"dim"
+argument_list|,
+literal|"a"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|config
+operator|.
+name|build
+argument_list|(
+name|taxoWriter
+argument_list|,
+name|doc
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// NRT open
+name|IndexSearcher
+name|searcher
+init|=
+name|newSearcher
+argument_list|(
+name|writer
+operator|.
+name|getReader
+argument_list|()
+argument_list|)
+decl_stmt|;
+comment|// NRT open
+name|TaxonomyReader
+name|taxoReader
+init|=
+operator|new
+name|DirectoryTaxonomyReader
+argument_list|(
+name|taxoWriter
+argument_list|)
+decl_stmt|;
+name|DrillSideways
+name|ds
+init|=
+operator|new
+name|DrillSideways
+argument_list|(
+name|searcher
+argument_list|,
+name|config
+argument_list|,
+name|taxoReader
+argument_list|)
+decl_stmt|;
+name|BooleanQuery
+name|bq
+init|=
+operator|new
+name|BooleanQuery
+argument_list|(
+literal|true
+argument_list|)
+decl_stmt|;
+name|bq
+operator|.
+name|add
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"foo"
+argument_list|)
+argument_list|)
+argument_list|,
+name|BooleanClause
+operator|.
+name|Occur
+operator|.
+name|MUST
+argument_list|)
+expr_stmt|;
+name|bq
+operator|.
+name|add
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"bar"
+argument_list|)
+argument_list|)
+argument_list|,
+name|BooleanClause
+operator|.
+name|Occur
+operator|.
+name|MUST_NOT
+argument_list|)
+expr_stmt|;
+name|DrillDownQuery
+name|ddq
+init|=
+operator|new
+name|DrillDownQuery
+argument_list|(
+name|config
+argument_list|,
+name|bq
+argument_list|)
+decl_stmt|;
+name|ddq
+operator|.
+name|add
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"foo"
+argument_list|)
+expr_stmt|;
+name|ddq
+operator|.
+name|add
+argument_list|(
+literal|"author"
+argument_list|,
+name|bq
+argument_list|)
+expr_stmt|;
+name|ddq
+operator|.
+name|add
+argument_list|(
+literal|"dim"
+argument_list|,
+name|bq
+argument_list|)
+expr_stmt|;
+name|DrillSidewaysResult
+name|r
+init|=
+name|ds
+operator|.
+name|search
+argument_list|(
+literal|null
+argument_list|,
+name|ddq
+argument_list|,
+literal|10
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|r
+operator|.
+name|hits
+operator|.
+name|totalHits
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|IOUtils
+operator|.
+name|close
+argument_list|(
+name|searcher
+operator|.
+name|getIndexReader
+argument_list|()
+argument_list|,
+name|taxoReader
+argument_list|,
+name|taxoWriter
 argument_list|,
 name|dir
 argument_list|,
